[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ucl-gpu-infra"
version = "0.2.3"
description = "Shared UCL GPU broker + experiment-submission infra (gpu_broker, stage6_infra, run_poller)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24",
    "loguru>=0.7",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the experiment-infra shell scripts as package data so find_infra_scripts()
# resolves them with zero env wiring on any install. Also ship the secrets
# template so `python -m` consumers can locate the example without the repo.
ucl_gpu_infra = ["scripts/*.sh", "secrets.env.template"]
